add more ways to slice time, update swagger to match
