# lib/api/entries/index.js
@@ -194,7 +194,8 @@ function configure (app, wares, ctx) {
         query.count = 10;
       }
 
-      ctx.entries.list(query, function(err, entries) {
+      var storage = req.storage || ctx.entries;
+      storage.list(query, function(err, entries) {
         res.entries = entries;
         res.entries_err = err;
         return next( );
@@ -259,27 +260,49 @@ function configure (app, wares, ctx) {
       var matches = pattern.map(function iter (pat) {
             return new RegExp(pat);
       });
-      var query = {
-        dateString: {
+      var field = req.patternField;
+      var query = { };
+      query[field] = {
           $in: matches
-        }
       };
 
       if (req.query.find) {
-        if (req.query.find.dateString) {
-          req.query.find.dateString.$in = query.dateString.$in;
+        if (req.query.find[field]) {
+          req.query.find[field].$in = query[field].$in;
         } else {
-          req.query.find.dateString = query.dateString;
+          req.query.find[field] = query[field];
         }
       } else {
         req.query.find = query;
       }
+      if (req.params.type) {
+        req.query.find.type = req.params.type;
+      }
       next( );
     }
-    api.get('/times/echo/:prefix?/:regex?', prep_patterns, function (req, res, next) {
+
+    function prep_pattern_field (req, res, next) {
+      if (req.params.field) {
+        req.patternField = req.params.field;
+      } else {
+        req.patternField = 'dateString';
+      }
+      next( );
+    }
+    function prep_storage (req, res, next) {
+      if (req.params.storage) {
+        req.storage = ctx[req.params.storage];
+      } else {
+        req.storage = ctx.entries;
+      }
+      next( );
+    }
+
+    api.get('/times/echo/:prefix?/:regex?', prep_storage, prep_pattern_field, prep_patterns, prep_patterns, function (req, res, next) {
       res.json({ req: { params: req.params, query: req.query}, pattern: req.pattern});
     });
-    api.get('/times/:prefix?/:regex?', prep_patterns, query_models, format_entries);
+    api.get('/times/:prefix?/:regex?', prep_storage, prep_pattern_field, prep_patterns, prep_patterns, query_models, format_entries);
+    api.get('/slice/:storage/:field/:type?/:prefix?/:regex?', prep_storage, prep_pattern_field, prep_patterns, query_models, format_entries);
 
     // Allow previewing your post content, just echos everything you
     // posted back out.
